// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductListItem should render successfully 1`] = `
<div>
  <div
    class="css-zkv16y"
  >
    <div
      aria-checked="false"
      class="css-1qso258 "
      data-test-id="product-preview-M0E20130820E90Z"
      role="switch"
      tabindex="-1"
    >
      <div
        class="css-1dtkwc5"
      >
        <img
          alt="product preview"
          class="css-1ddetr"
          data-test-id="image"
          src="https://s3-eu-west-1.amazonaws.com/commercetools-example/products/picture-1.jpg"
          style="display: block;"
        />
        <img
          alt="check"
          class="css-1imdisq"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDQiIGhlaWdodD0iNDQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGcgZmlsbD0iIzMwNzJCRSIgZmlsbC1ydWxlPSJldmVub2RkIj48Y2lyY2xlIGZpbGwtb3BhY2l0eT0iLjEiIGN4PSIyMiIgY3k9IjIyIiByPSIyMiIvPjxwYXRoIGQ9Ik0zMS42ODkgMTYuNjE0TDI5LjU1NSAxNC41IDE5LjAyNCAyNS4yNzVsLTQuNjItNC40MDYtMi4wOTIgMi4xNTMgNi43NSA2LjQ3OCAxMi42MjctMTIuODg2eiIgZmlsbC1ydWxlPSJub256ZXJvIi8+PC9nPjwvc3ZnPg=="
        />
      </div>
      <p
        class="css-182natc"
      >
        Dress Twin-Set rose
      </p>
      <p
        class="css-1tx1iym"
      >
        M0E20130820E90Z
      </p>
    </div>
  </div>
</div>
`;

exports[`ProductListItem should render successfully the error variation 1`] = `
<div>
  <div
    class="css-zkv16y"
  >
    <div
      aria-checked="true"
      class="css-1qso258 css-1rtg1va"
      data-test-id="product-preview-M0E20130820E90Z"
      role="switch"
      tabindex="-1"
    >
      <div
        class="css-37z5d9"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined"
          data-test-id="cf-ui-icon"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </div>
      <p
        class="css-182natc"
      >
        Dress Twin-Set rose
      </p>
      <p
        class="css-1tx1iym"
      >
        M0E20130820E90Z
      </p>
    </div>
  </div>
</div>
`;

exports[`ProductListItem should render successfully the isSelected variation 1`] = `
<div>
  <div
    class="css-zkv16y"
  >
    <div
      aria-checked="true"
      class="css-1qso258 css-1rtg1va"
      data-test-id="product-preview-M0E20130820E90Z"
      role="switch"
      tabindex="-1"
    >
      <div
        class="css-1dtkwc5"
      >
        <img
          alt="product preview"
          class="css-1ddetr"
          data-test-id="image"
          src="https://s3-eu-west-1.amazonaws.com/commercetools-example/products/picture-1.jpg"
          style="display: block;"
        />
        <img
          alt="check"
          class="css-1bpg4ef"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDQiIGhlaWdodD0iNDQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGcgZmlsbD0iIzMwNzJCRSIgZmlsbC1ydWxlPSJldmVub2RkIj48Y2lyY2xlIGZpbGwtb3BhY2l0eT0iLjEiIGN4PSIyMiIgY3k9IjIyIiByPSIyMiIvPjxwYXRoIGQ9Ik0zMS42ODkgMTYuNjE0TDI5LjU1NSAxNC41IDE5LjAyNCAyNS4yNzVsLTQuNjItNC40MDYtMi4wOTIgMi4xNTMgNi43NSA2LjQ3OCAxMi42MjctMTIuODg2eiIgZmlsbC1ydWxlPSJub256ZXJvIi8+PC9nPjwvc3ZnPg=="
        />
      </div>
      <p
        class="css-182natc"
      >
        Dress Twin-Set rose
      </p>
      <p
        class="css-1tx1iym"
      >
        M0E20130820E90Z
      </p>
    </div>
  </div>
</div>
`;

exports[`ProductListItem should render successfully the loading variation 1`] = `
<div>
  <div
    class="css-zkv16y"
  >
    <div
      aria-checked="false"
      class="css-1qso258 "
      data-test-id="product-preview-M0E20130820E90Z"
      role="switch"
      tabindex="-1"
    >
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu css-7uqnex"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-id)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-id"
          >
            <rect
              height="290"
              rx="0"
              ry="0"
              width="400"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation1"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation1.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation1.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
      <div
        class="css-nk39el"
      >
        <img
          alt="product preview"
          class="css-1ddetr"
          data-test-id="image"
          src="https://s3-eu-west-1.amazonaws.com/commercetools-example/products/picture-1.jpg"
          style="display: none;"
        />
        <img
          alt="check"
          class="css-1imdisq"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDQiIGhlaWdodD0iNDQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGcgZmlsbD0iIzMwNzJCRSIgZmlsbC1ydWxlPSJldmVub2RkIj48Y2lyY2xlIGZpbGwtb3BhY2l0eT0iLjEiIGN4PSIyMiIgY3k9IjIyIiByPSIyMiIvPjxwYXRoIGQ9Ik0zMS42ODkgMTYuNjE0TDI5LjU1NSAxNC41IDE5LjAyNCAyNS4yNzVsLTQuNjItNC40MDYtMi4wOTIgMi4xNTMgNi43NSA2LjQ3OCAxMi42MjctMTIuODg2eiIgZmlsbC1ydWxlPSJub256ZXJvIi8+PC9nPjwvc3ZnPg=="
        />
      </div>
      <p
        class="css-182natc"
      >
        Dress Twin-Set rose
      </p>
      <p
        class="css-1tx1iym"
      >
        M0E20130820E90Z
      </p>
    </div>
  </div>
</div>
`;
